--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <nav class="main-nav">
                 <ul class="horizontal-list">
                     <li><a href="./pages/shop.html">Shop</a></li>
-                    <li><a href="./pages/shop.html">Brands</a></li>
-                    <li>On sale</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                    <li><a href="./pages/brands.html">Brands</a></li>
+                    <li><a href="./pages/sale.html">On sale</a></li>
+                    <li><a href="./pages/about.html">About</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
                 </ul>
             </nav>
             <nav class="icon-nav">
