[feat] Added some sections

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,9 +17,9 @@
                 <ul class="horizontal-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./brands.html">Brands</a></li>
-                    <li><a href="./sale.html"></a>On sale</li>
-                    <li><a href="#"></a>About</li>
-                    <li><a href="./contact.html"></a>Contact</li>
+                    <li><a href="./sale.html">On sale</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
             <nav class="icon-nav">
@@ -33,7 +33,13 @@
     </header>
 
     <main>
-        <section>info - section1</section>
+        <section class="introduce-us">
+            <div class="wrapper">
+                <p>We are delighted to introduce ourselves as the passionate team behind Petmart, an online shop dedicated to providing high-quality pet food, treats, and toys. As pet lovers ourselves, we understand the challenges of finding the perfect products for our furry companions. That’s why we established Petmart – to make the pet shopping experience easy, convenient, and affordable.
+
+                    At Petmart, we focus on offering top-quality products at competitive prices, ensuring both pet owners and their pets are satisfied. With fast local delivery, we aim to provide all pet owners with easy access to the best products for their beloved pets. Shop at Petmart today and give your furry friends the love and care they deserve!</p>
+            </div>
+            </section>
         <section>link </section>
         <section>brand</section>
         <section></section>
