--- a/pages/brands.html
+++ b/pages/brands.html
@@ -17,9 +17,9 @@
                 <ul class="horizontal-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="#">Brands</a></li>
-                    <li>On sale</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                    <li><a href="./sale.html">On sale</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
             <nav class="icon-nav">
@@ -33,45 +33,48 @@
     </header>
 
     <main>
-        <section class="shop-section-1">
+        <section class="heading">
             <div class="wrapper">
-                <div id="top-introduction">
+                <div class="heading-top">
                     <p>Explore the diverse range of products these top brands offer, from Acana and NOW Fresh to Zeal. Whether you're looking for cat litter or entertaining dog toys, you'll find everything your best friend needs. These brands provide premium nutrition in various forms, including kibble, canned/wet, freeze-dried, and frozen raw. The options are endless, and our knowledgeable store associates are here to help you select the perfect products for your pets.</p>
                 </div>
             </div>
         </section>
-        <section>link 
-            <ul>
-                <li>A</li>
-                <li>B</li>
-                <li>C</li>
-                <li>D</li>
-                <li>E</li>
-                <li>F</li>
-                <li>G</li>
-                <li>H</li>
-                <li>I</li>
-                <li>J</li>
-                <li>K</li>
-                <li>L</li>
-                <li>M</li>
-                <li>N</li>
-                <li>O</li>
-                <li>P</li>
-                <li>Q</li>
-                <li>R</li>
-                <li>S</li>
-                <li>T</li>
-                <li>U</li>
-                <li>V</li>
-                <li>W</li>
-                <li>X</li>
-                <li>Y</li>
-                <li>Z</li>
-            </ul>
+        <section class="shop-section-link">
+            <div class="wrapper">
+                <ul class="brands-lists">
+                    <li><a href="">A</a></li>
+                    <li><a href="">B</a></li>
+                    <li><a href="">C</a></li>
+                    <li><a href="">D</a></li>
+                    <li><a href="">E</a></li>
+                    <li><a href="">F</a></li>
+                    <li><a href="">G</a></li>
+                    <li><a href="">H</a></li>
+                    <li><a href="">I</a></li>
+                    <li><a href="">J</a></li>
+                    <li><a href="">K</a></li>
+                    <li><a href="">L</a></li>
+                    <li><a href="">M</a></li>
+                    <li><a href="">N</a></li>
+                    <li><a href="">O</a></li>
+                    <li><a href="">P</a></li>
+                    <li><a href="">Q</a></li>
+                    <li><a href="">R</a></li>
+                    <li><a href="">S</a></li>
+                    <li><a href="">T</a></li>
+                    <li><a href="">U</a></li>
+                    <li><a href="">V</a></li>
+                    <li><a href="">W</a></li>
+                    <li><a href="">X</a></li>
+                    <li><a href="">Y</a></li>
+                    <li><a href="">Z</a></li>
+                </ul>
+            </div>
         </section>
+
         <section>brand</section>
-        <section></section>
+
     </main>
 
     <footer class="footer">
