--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,9 +17,9 @@
                 <ul class="horizontal-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./brands.html">Brands</a></li>
-                    <li><a href="./sale.html"></a>On sale</li>
-                    <li><a href="./about.html"></a>About</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="./sale.html">On sale</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
             <nav class="icon-nav">
@@ -33,7 +33,24 @@
     </header>
 
     <main>
-        <section>info - section1</section>
+        <section>
+            <div class="wrapper">
+                <div class="message">
+                    <h3>Send Us a Message</h3>
+                    <p>Do you have comments or questions? Just want to say hello? We’d love to hear from you. Fill out the form below, and we’ll connect with you soon.</p>
+                </div>
+                <div class="input-info">
+                    <h2>Your Name</h2>
+                    <input type="text" name="name" id="name" placeholder="First and Last name">
+                    <h2>Your Email</h2>
+                    <input type="email" name="email" id="email">
+                    <h2>Your Message</h2>
+                    <input type="text" name="" id="">
+                    <a href="#" class="button-style">Submit</a>
+
+                </div>
+            </div>
+        </section>
         <section>link </section>
         <section>brand</section>
         <section></section>
