--- a/pages/sale.html
+++ b/pages/sale.html
@@ -17,9 +17,9 @@
                 <ul class="horizontal-list">
                     <li><a href="./shop.html">Shop</a></li>
                     <li><a href="./brands.html">Brands</a></li>
-                    <li><a href="#"></a>On sale</li>
-                    <li><a href="./about.html"></a>About</li>
-                    <li><a href="./contact.html"></a>Contact</li>
+                    <li><a href="#">On sale</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
             <nav class="icon-nav">
@@ -33,21 +33,109 @@
     </header>
 
     <main>
-        <section class="sale-section-1">
+        <div class="heading">
             <div class="wrapper">
-                <h2>Sale Items</h2>
+                <h2 class="heading-top">Unbeatable Deals on Top Pet Products!</h2>
+                <p>Discover incredible discounts on premium pet supplies. Shop now and save on everything your furry friends love!</p>    
+            </div>
+        </div>
+        
+        <section class="sale-section-1">    
+            <div class="wrapper">
+                <h2 class="heading-middle">Sale Items</h2>
                 <div class="item-grid">
-                    <div><img src="../assets/SUM_DF_FarmsteadFeast_Small-e1691527821764-300x300.png"></div>
-                    <div><img src="../assets/THK-WFC-Chicken-20lb-Web-e1692136844805-300x300.png"></div>
-                    <div><img src="../assets/Mammoth-Squeaky-Freaks-Small-8in-lg-300x300.webp"></div>
-                    <div><img src="../assets/USD721-e1691602091137-300x300.jpg"></div>
-                    <div><img src="../assets//USD731-e1691624065570-300x300.jpg"></div>
-                    <div><img src="../assets/769949601296_MAIN-300x300.jpg"></div>
-                    <div><img src="../assets/BigEarDonkey-83089-300x300.webp"></div>
-                    <div><img src="../assets/Go-Carnivore-GF-Chicken-Turky-Duck-Stew-300x300.webp"></div>
-                    <div><img src="../assets/USD723-1-300x300.webp"></div>
-                    <div><img src="../assets/Fat-Cat-Floppability-Dog-Toy.webp"></div>
-                    <div><img src="../assets/Jungle-Monkey-Blue-lg-300x300.webp"></div>
+                    <div class="product-container">
+                        <img src="../assets/SUM_DF_FarmsteadFeast_Small-e1691527821764-300x300.png">
+                        <div class="product-content">
+                            <h3>Summit Farmstead Feast Recipe for Dogs</h3>
+                            <p>$56.99 Now $39.99</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/THK-WFC-Chicken-20lb-Web-e1692136844805-300x300.png">
+                        <div class="product-content">
+                            <h3>Honest Kitchen Grain Free Chicken Clusters</h3>
+                            <p>$119.99 Now $109.99</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/Mammoth-Squeaky-Freaks-Small-8in-lg-300x300.webp">
+                        <div class="product-content">
+                            <h3>Mammoth Squeaky Freaks Dog</h3>
+                            <p>$15.99 Now $13.69</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/USD721-e1691602091137-300x300.jpg">
+                        <div class="product-content">
+                            <h3>Mammoth Squeaky Freaks Dog</h3>
+                            <p>$15.99 Now $13.69</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets//USD731-e1691624065570-300x300.jpg">
+                        <div class="product-content">
+                            <h3>Inaba Churu Rolls Chicken Recipe For Dogs</h3>
+                            <p>$12.49
+                                Original price was: $12.49.
+                                $9.99
+                                Current price is: $9.99.</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/769949601296_MAIN-300x300.jpg">
+                        <div class="product-content">
+                            <h3>Instinct Dog Freeze-Dried Raw Boost Mixers Gut Health Recipe</h3>
+                            <p>$21.99 Original price was: $21.99.$16.99</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/BigEarDonkey-83089-300x300.webp">
+                        <div class="product-content">
+                            <h3>Rascals Latex Big Ear Donkey 6.5″</h3>
+                            <p>$16.99
+                                Original price was: $16.99.
+                                $14.99
+                                Current price is: $14.99.</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/Go-Carnivore-GF-Chicken-Turky-Duck-Stew-300x300.webp">
+                        <div class="product-content">
+                            <h3>Go! Solutions Carnivore Dog Grain-Free Chicken Turkey & Duck Stew</h3>
+                            <p>$4.99 Original price was: $4.99.$2.69</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/USD723-1-300x300.webp">
+                        <div class="product-content">
+                            <h3>Inaba Churu Bites Chicken & Salmon Recipe For Dogs</h3>
+                            <p>$12.49
+                                Original price was: $12.49.
+                                $9.99
+                                Current price is: $9.99.</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/Fat-Cat-Floppability-Dog-Toy.webp">
+                        <div class="product-content">
+                            <h3>Fat Cat Floppability Dog Toy</h3>
+                            <p>$19.99
+                                Original price was: $19.99.
+                                $16.99
+                                Current price is: $16.99.</p>
+                        </div>
+                    </div>
+                    <div class="product-container">
+                        <img src="../assets/Jungle-Monkey-Blue-lg-300x300.webp">
+                        <div class="product-content">
+                            <h3>PetSport Jungle Monkey Assorted Dog Plush</h3>
+                            <p>$16.99
+                                Original price was: $16.99.
+                                $14.99
+                                Current price is: $14.99.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
