[feat] Added links on brands page

--- a/pages/sale.html
+++ b/pages/sale.html
@@ -45,35 +45,50 @@
                 <h2 class="heading-middle">Sale Items</h2>
                 <div class="item-grid">
                     <div class="product-container">
-                        <img src="../assets/SUM_DF_FarmsteadFeast_Small-e1691527821764-300x300.png">
+                        <img class="product-pic" src="../assets/SUM_DF_FarmsteadFeast_Small-e1691527821764-300x300.png">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Summit Farmstead Feast Recipe for Dogs</h3>
                             <p>$56.99 Now $39.99</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/THK-WFC-Chicken-20lb-Web-e1692136844805-300x300.png">
+                        <img class="product-pic" src="../assets/THK-WFC-Chicken-20lb-Web-e1692136844805-300x300.png">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Honest Kitchen Grain Free Chicken Clusters</h3>
                             <p>$119.99 Now $109.99</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/Mammoth-Squeaky-Freaks-Small-8in-lg-300x300.webp">
+                        <img class="product-pic" src="../assets/Mammoth-Squeaky-Freaks-Small-8in-lg-300x300.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Mammoth Squeaky Freaks Dog</h3>
                             <p>$15.99 Now $13.69</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/USD721-e1691602091137-300x300.jpg">
+                        <img class="product-pic" src="../assets/USD721-e1691602091137-300x300.jpg">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Mammoth Squeaky Freaks Dog</h3>
                             <p>$15.99 Now $13.69</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets//USD731-e1691624065570-300x300.jpg">
+                        <img class="product-pic" src="../assets//USD731-e1691624065570-300x300.jpg">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Inaba Churu Rolls Chicken Recipe For Dogs</h3>
                             <p>$12.49
@@ -83,14 +98,20 @@
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/769949601296_MAIN-300x300.jpg">
+                        <img class="product-pic" src="../assets/769949601296_MAIN-300x300.jpg">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Instinct Dog Freeze-Dried Raw Boost Mixers Gut Health Recipe</h3>
                             <p>$21.99 Original price was: $21.99.$16.99</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/BigEarDonkey-83089-300x300.webp">
+                        <img class="product-pic" src="../assets/BigEarDonkey-83089-300x300.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Rascals Latex Big Ear Donkey 6.5″</h3>
                             <p>$16.99
@@ -100,14 +121,20 @@
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/Go-Carnivore-GF-Chicken-Turky-Duck-Stew-300x300.webp">
+                        <img class="product-pic" src="../assets/Go-Carnivore-GF-Chicken-Turky-Duck-Stew-300x300.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Go! Solutions Carnivore Dog Grain-Free Chicken Turkey & Duck Stew</h3>
                             <p>$4.99 Original price was: $4.99.$2.69</p>
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/USD723-1-300x300.webp">
+                        <img class="product-pic" src="../assets/USD723-1-300x300.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Inaba Churu Bites Chicken & Salmon Recipe For Dogs</h3>
                             <p>$12.49
@@ -117,7 +144,10 @@
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/Fat-Cat-Floppability-Dog-Toy.webp">
+                        <img class="product-pic" src="../assets/Fat-Cat-Floppability-Dog-Toy.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>Fat Cat Floppability Dog Toy</h3>
                             <p>$19.99
@@ -127,7 +157,10 @@
                         </div>
                     </div>
                     <div class="product-container">
-                        <img src="../assets/Jungle-Monkey-Blue-lg-300x300.webp">
+                        <img class="product-pic" src="../assets/Jungle-Monkey-Blue-lg-300x300.webp">
+                        <div class="tag-container">
+                            <img class="sale-mark" src="../assets/sale2.png" alt="sale-mark">    
+                        </div>
                         <div class="product-content">
                             <h3>PetSport Jungle Monkey Assorted Dog Plush</h3>
                             <p>$16.99
