[feat] Made filter

--- a/pages/about.html
+++ b/pages/about.html
@@ -33,16 +33,36 @@
     </header>
 
     <main>
+        <div class="heading">
+            <div class="wrapper">
+                <h2 class="heading-top">About Us</h2>
+            </div>
+        </div>
+
         <section class="introduce-us">
             <div class="wrapper">
-                <p>We are delighted to introduce ourselves as the passionate team behind Petmart, an online shop dedicated to providing high-quality pet food, treats, and toys. As pet lovers ourselves, we understand the challenges of finding the perfect products for our furry companions. That’s why we established Petmart – to make the pet shopping experience easy, convenient, and affordable.
-
-                    At Petmart, we focus on offering top-quality products at competitive prices, ensuring both pet owners and their pets are satisfied. With fast local delivery, we aim to provide all pet owners with easy access to the best products for their beloved pets. Shop at Petmart today and give your furry friends the love and care they deserve!</p>
+                <div class="upper-container">
+                    <div class="story-content-upper">
+                        <img src="../assets/dog.png" alt="dog icon">
+                        <p>We are delighted to introduce ourselves as the passionate team behind Pawsomebites, an online shop dedicated to providing high-quality pet food, treats, and toys.<br/>
+                            As pet lovers ourselves, we understand the challenges of finding the perfect products for our furry companions.</p>
+                    </div>
+                    <div class="img-content-upper">
+                        <img src="../assets/green.jpg" alt="dog on a green bed">
+                    </div>
+                </div>
+                <div class="under-container">
+                    <div class="img-content-under">
+                        <img src="../assets/black.jpg" alt="dog in black and white">
+                    </div>
+                    <div class="story-content-under">
+                        <img src="../assets/bone.png" alt="bone icon">
+                        <p>That’s why we established Pawsomebites – to make the pet shopping experience easy, convenient, and affordable.<br/>
+                            We focus on offering top-quality products at competitive prices, ensuring both pet owners and their pets are satisfied. With fast local delivery, we aim to provide all pet owners with easy access to the best products for their beloved pets. Shop at Petmart today and give your furry friends the love and care they deserve!</p>
+                    </div>
+                    
             </div>
-            </section>
-        <section>link </section>
-        <section>brand</section>
-        <section></section>
+        </section>
     </main>
 
     <footer class="footer">
