--- a/pages/brands.html
+++ b/pages/brands.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="../css/desktop.css">
     <link rel="stylesheet" href="../css/tablet.css">
     <link rel="stylesheet" href="../css/mobile.css">
     <title>Brands [PawsomeBites]</title>
 </head>
-<body>
+<body>  
     <header>
         <div class="wrapper">
             <a class="header-home" href="../index.html" ><img src="../assets/pawprint.png" alt="Logo">PawsomeBites</a>
@@ -35,9 +36,8 @@
     <main>
         <section class="heading">
             <div class="wrapper">
-                <div class="heading-top">
-                    <p>Explore the diverse range of products these top brands offer, from Acana and NOW Fresh to Zeal. Whether you're looking for cat litter or entertaining dog toys, you'll find everything your best friend needs. These brands provide premium nutrition in various forms, including kibble, canned/wet, freeze-dried, and frozen raw. The options are endless, and our knowledgeable store associates are here to help you select the perfect products for your pets.</p>
-                </div>
+                <h2 class="heading-top">Explore the diverse range of products</h2>
+                <p>Whether you're looking for cat litter or entertaining dog toys, you'll find everything your best friend needs. These brands provide premium nutrition in various forms, including kibble, canned/wet, freeze-dried, and frozen raw. The options are endless, and our knowledgeable store associates are here to help you select the perfect products for your pets.</p>
             </div>
         </section>
         <section class="brands-section-link">
@@ -84,6 +84,7 @@
                         <a href="#">Aspen Pet</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="b">B</div>
                     <div class="each-brand">
@@ -96,6 +97,7 @@
                         <a href="#">Bone + Arrow</a>
                     </div>
                 </div>           
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="c">C</div>
                     <div class="each-brand">
@@ -109,6 +111,7 @@
                         <a href="#">Crumps</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="d">D</div>
                     <div class="each-brand">
@@ -116,6 +119,7 @@
                         <a href="#">Darford</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="e">E</div>
                     <div class="each-brand">
@@ -125,6 +129,7 @@
                         <a href="#">Emerald Pet</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="f">F</div>
                     <div class="each-brand">
@@ -138,6 +143,7 @@
                         <a href="#">Furminator</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="g">G</div>
                     <div class="each-brand">
@@ -149,6 +155,7 @@
                         <a href="#">Greenies</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="h">H</div>
                     <div class="each-brand">
@@ -163,6 +170,7 @@
                         <a href="#"></a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="i">I</div>
                     <div class="each-brand">
@@ -170,6 +178,7 @@
                         <a href="#">Instinct</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="j">J</div>
                     <div class="each-brand">
@@ -178,6 +187,7 @@
                         <a href="#">JW Pet</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="k">K</div>
                     <div class="each-brand">
@@ -187,6 +197,7 @@
                         <a href="#">Kong</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="l">L</div>
                     <div class="each-brand">
@@ -196,6 +207,7 @@
                         <a href="#">Loving Pets</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="m">M</div>
                     <div class="each-brand">
@@ -206,6 +218,7 @@
                         <a href="#">Midwest Homes for Pets</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="n">N</div>
                     <div class="each-brand">
@@ -218,6 +231,7 @@
                         <a href="#">Nylabone</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="o">O</div>
                     <div class="each-brand">
@@ -227,6 +241,7 @@
                         <a href="#">Oxbow</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="p">P</div>
                     <div class="each-brand">
@@ -247,11 +262,13 @@
                         <a href="#">Purica</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="q">Q</div>
                     <div class="each-brand">
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="r">R</div>
                     <div class="each-brand">
@@ -260,6 +277,7 @@
                         <a href="#">Royal Canin</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part" id="s">
                     <div class="capital-letter">S</div>
                     <div class="each-brand">
@@ -278,6 +296,7 @@
                         <a href="#">Summit</a>
                     </div>                  
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="t">T</div>
                     <div class="each-brand">
@@ -292,12 +311,14 @@
                         <a href="#">Turbo</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="u">U</div>
                     <div class="each-brand">
                         <a href="#">Unleashed</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="v">V</div>
                     <div class="each-brand">
@@ -305,6 +326,7 @@
                         <a href="#">VitaPet</a>
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="w">W</div>
                     <div class="each-brand">
@@ -319,16 +341,19 @@
                         <a href="#"></a>
                     </div>  
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="x">X</div>
                     <div class="each-brand">
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="y">Y</div>
                     <div class="each-brand">
                     </div>
                 </div>
+                <div class="line"><hr></div>
                 <div class="alphabet-part">
                     <div class="capital-letter" id="z">Z</div>
                     <div class="each-brand">
