--- a/pages/shop.html
+++ b/pages/shop.html
@@ -32,41 +32,29 @@
         </div>
     </header>
 
-    <aside class="shop-aside">
-        <div class="wrapper">
-            <div class="filters">
-                <h3>Filters</h3>
-                <ul>
-                    <li><a href="#">Brand <img src="../assets/angle-small-down.png" alt="dropdown button"></a></li>
-                    <li><a href="#">Product type <img src="../assets/angle-small-down.png" alt="dropdown button"></a></li>
-                    <li><a href="#">Availability <img src="../assets/angle-small-down.png" alt="dropdown button"></a></li>
-                    <li><a href="#">Price <img src="../assets/angle-small-down.png" alt="dropdown button"></a></li>
-                </ul>
-            </div>
-        </div>
-    </aside>
-
     <main>
-        <section class="search">
+        <section class="shop-section-search">
             <div class="wrapper">
-                <input type="search" name="search" id="search" placeholder="Search">
-                <select name="categories" id="categories">
-                    <option value="accessories">Accessories</option>
-                    <option value="beds">Beds</option>
-                    <option value="bowl-feeders">Bowl&Feeders</option>
-                    <option value="food">Food</option>
-                    <option value="grooming">Grooming</option>
-                    <option value="health">Health</option>
-                    <option value="toy">Toy</option>
-                    <option value="treats">Treats</option>
-                </select>
-                <a href="#" class="button-style">Search</a>
+                <div class="search-container">
+                    <input type="search" name="search" id="search" placeholder="Search">
+                    <select name="categories" id="categories">
+                        <option value="accessories">Accessories</option>
+                        <option value="beds">Beds</option>
+                        <option value="bowl-feeders">Bowl&Feeders</option>
+                        <option value="food">Food</option>
+                        <option value="grooming">Grooming</option>
+                        <option value="health">Health</option>
+                        <option value="toy">Toy</option>
+                        <option value="treats">Treats</option>
+                    </select>
+                </div>
+                <a href="#" class="button-style"><img src="../assets/search.png" alt="search icon"></a>
             </div>
         </section>
         <section class="shop-section-product">
             <div class="wrapper">
                 <div class="shop-content">
-                    <h2>Shop List</h2>
+                    <h2>Product List</h2>
                 </div>
                 
             </div>
