[feat] Responsive grid sizing

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                 <div class="content">
                     <h3>Explorer</h3>
                     <ul class="explorer-info">
-                        <li>Shop</li>
-                        <li>Brands</li>
-                        <li>On sale</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="./pages/shop.html">Shop</a></li>
+                        <li><a href="./pages/brands.html">Brands</a></li>
+                        <li><a href="./pages/sale.html">On sale</a></li>
+                        <li><a href="./pages/about.html">About</a></li>
+                        <li><a href="./pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
 
