--- a/pages/contact.html
+++ b/pages/contact.html
@@ -54,10 +54,10 @@
                     <h2>Your Name</h2>
                     <input type="text" name="name" id="name" placeholder="First and Last name">
                     <h2>Your Email</h2>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder="abc@email.com">
                     <h2>Your Message</h2>
-                    <input type="text" name="" id="">
-                    <a href="#" class="button-style">Submit</a>
+                    <textarea name="text" id="message" placeholder="Message"></textarea>
+                    <a href="#" class="submit-button">Submit</a>
                 </div>
             </div>
         </section>
@@ -91,11 +91,11 @@
                 <div class="content">
                     <h3>Explorer</h3>
                     <ul class="explorer-info">
-                        <li>Shop</li>
-                        <li>Brands</li>
-                        <li>On sale</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="./brands.html">Brands</a></li>
+                        <li><a href="./sale.html">On sale</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
 
