--- a/pages/brands.html
+++ b/pages/brands.html
@@ -400,11 +400,11 @@
                 <div class="content">
                     <h3>Explorer</h3>
                     <ul class="explorer-info">
-                        <li>Shop</li>
-                        <li>Brands</li>
-                        <li>On sale</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="#">Brands</a></li>
+                        <li><a href="./sale.html">On sale</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
 
